# front_desk--crewai-flow

./: .gitignore  CLAUDE.md  README.md  crewai_flow.html  pyproject.toml  report.md
knowledge/: actions.md  capabilities.md
src/front_desk/: __init__.py  main.py
src/front_desk/crews/: __init__.py
src/front_desk/crews/translation_crew/: __init__.py  models.py  translation_crew.py
src/front_desk/crews/translation_crew/config/: agents.yaml  tasks.yaml
src/front_desk/models/: __init__.py
src/frontdesk/: main.py
src/frontdesk/crews/: __init__.py
src/frontdesk/crews/search_topic_crew/: __init__.py  search_topic_crew.py
src/frontdesk/crews/secretary_crew/: __init__.py  models.py  secretary_crew.py
src/frontdesk/crews/secretary_crew/config/: agents.yaml  tasks.yaml
src/frontdesk/crews/translation_crew/: models.py  translation_crew.py
src/frontdesk/crews/translation_crew/config/: agents.yaml  tasks.yaml
src/frontdesk/models/: __init__.py  actions.py  front_desk_state.py  message.py
src/frontdesk/tools/: __init__.py  github_tool.py
